fdo#39206 Add support for image transformation in SVG Import

Change-Id: I268599b0c13bbacf5db526fed79453a5443145a5
Reviewed-on: https://gerrit.libreoffice.org/6968
Reviewed-by: Miklos Vajna <vmiklos@collabora.co.uk>
Tested-by: Miklos Vajna <vmiklos@collabora.co.uk>
(cherry picked from commit fb978b8123a47123d184daf390ce17eaacbc05d9)